Fix overflow issue on iOS

--- a/web/style.css
+++ b/web/style.css
@@ -42,6 +42,10 @@ body {
 	color: var(--fg-color);
 	grid-template-columns: auto 1fr auto;
 	grid-template-rows: auto auto 1fr auto;
+	min-height: -webkit-fill-available;
+	max-height: -webkit-fill-available;
+	min-width: -webkit-fill-available;
+	max-width: -webkit-fill-available;
 }
 
 .comfyui-body-top {
